--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
       display: none;
     }
 
+    #feederMachine {
+      width: 28%;
+      height: auto;
+      position: absolute;
+      left: 76%;
+      transition: left 0.5s ease;
+      bottom: 100px;}
+
     .stats {
       font-size: 16px;
       margin: 10px 0;
@@ -103,6 +111,7 @@
   <div class="container">
     <img id="petImage" src="https://abblake89.github.io/ferro-pets/assets/Ferro.png" alt="Ferro, your magnetic pet" role="button" tabindex="0" />
     <img id="foodBowl" src="https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png" alt="Food Bowl" />
+    <img id="feederMachine" src="https://abblake89.github.io/ferro-pets/assets/FerroFeeder.png" alt="Feeder Machine" style="display: none;" />
     <button id="startButton" onclick="startGame()">Play</button>
   </div>
   <div class="stats" id="stats">
@@ -121,6 +130,7 @@
     const petImage = document.getElementById('petImage');
     const container = document.querySelector('.container');
     const foodBowl = document.getElementById('foodBowl');
+    const feeder = document.getElementById('feederMachine');
     const happinessEl = document.getElementById('happiness');
     const hungerEl = document.getElementById('hunger');
     const startButton = document.getElementById('startButton');
@@ -134,7 +144,8 @@
       'Ferro_left.png',
       'Ferro_right.png',
       'Ferro_blink.png',
-      'Ferro_Gold.png'
+      'Ferro_Gold.png',
+      'FerroFeeder.png'
     ];
 
     preloadImages.forEach(img => {
@@ -158,52 +169,7 @@
       startButton.style.display = 'none';
       stats.style.display = 'block';
       buttonControls.style.display = 'block';
-      startNFCScan();
       updateStats();
-      setInterval(() => {
-        if (isBusy) return;
-        const chance = Math.random();
-        if (chance < 0.4) blink();
-        else if (chance < 0.7) moveLeft();
-        else moveRight();
-      }, 4000);
-      setInterval(() => {
-        hunger = Math.min(100, hunger + 1);
-        happiness = Math.max(0, happiness - 1);
-        updateStats();
-      }, 5000);
-    }
-
-    function blink() {
-      if (isBusy) return;
-      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_blink.png';
-      setTimeout(() => {
-        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-      }, 300);
-    }
-
-    function moveLeft() {
-      if (isBusy) return;
-      isBusy = true;
-      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
-      backgroundX = Math.max(0, backgroundX - 15);
-      container.style.backgroundPositionX = backgroundX + '%';
-      setTimeout(() => {
-        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-        isBusy = false;
-      }, 500);
-    }
-
-    function moveRight() {
-      if (isBusy) return;
-      isBusy = true;
-      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
-      backgroundX = Math.min(100, backgroundX + 15);
-      container.style.backgroundPositionX = backgroundX + '%';
-      setTimeout(() => {
-        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-        isBusy = false;
-      }, 500);
     }
 
     function feedPet() {
@@ -216,9 +182,12 @@
       backgroundX = 100;
       container.style.backgroundPositionX = backgroundX + '%';
       foodBowl.style.display = 'inline';
+      feeder.style.display = 'inline';
       foodBowl.style.left = '120%';
+      feeder.style.left = '132%';
       setTimeout(() => {
         foodBowl.style.left = '64%';
+        feeder.style.left = '76%';
         const chewFrames = [
           'Ferro_Eat_Open.png',
           'Ferro_Eat_Closed.png',
@@ -245,12 +214,15 @@
               backgroundX = 50;
               container.style.backgroundPositionX = backgroundX + '%';
               foodBowl.style.left = '120%';
+              feeder.style.left = '132%';
               setTimeout(() => {
                 petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
                 foodBowl.style.left = '120%';
+                feeder.style.left = '132%';
                 setTimeout(() => {
                   foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png';
                   foodBowl.style.display = 'none';
+                  feeder.style.display = 'none';
                   isBusy = false;
                 }, 500);
               }, 500);
@@ -258,64 +230,6 @@
           }
         }, 800);
       }, 50);
-    }
-
-    function shakeFerro() {
-      if (isBusy) return;
-      isBusy = true;
-      const frames = [
-        'Ferro_left.png',
-        'Ferro_right.png',
-        'Ferro_left.png',
-        'Ferro_right.png'
-      ];
-      frames.forEach((frame, i) => {
-        setTimeout(() => {
-          petImage.src = `https://abblake89.github.io/ferro-pets/assets/${frame}`;
-        }, i * 120);
-      });
-      setTimeout(() => {
-        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-        isBusy = false;
-      }, frames.length * 120);
-    }
-
-    function goHome() {
-      if (isBusy) return;
-      isBusy = true;
-      backgroundX = 50;
-      container.style.backgroundPositionX = backgroundX + '%';
-      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-      setTimeout(() => {
-        isBusy = false;
-      }, 500);
-    }
-
-    function startNFCScan() {
-      if ('NDEFReader' in window) {
-        try {
-          const reader = new NDEFReader();
-          reader.scan().then(() => {
-            reader.onreading = event => {
-              const decoder = new TextDecoder();
-              for (const record of event.message.records) {
-                if (record.recordType === 'text') {
-                  const text = decoder.decode(record.data).trim();
-                  if (text === 'ferro_food') {
-                    feedPet();
-                  } else if (text === 'GoldFerro') {
-                    petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_Gold.png';
-                  }
-                }
-              }
-            };
-          });
-        } catch (error) {
-          alert("NFC scan failed: " + error);
-        }
-      } else {
-        alert("Web NFC is not supported in this browser.");
-      }
     }
   </script>
 </body>
