--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
       foodBowl.style.left = '120%';
       feeder.style.left = '132%';
       setTimeout(() => {
-        foodBowl.style.left = '64%';
-        feeder.style.left = '76%';
+        foodBowl.style.left = 'calc(64% - 15px)';
+        feeder.style.left = 'calc(76% - 45px)';
         const chewFrames = [
           'Ferro_Eat_Open.png',
           'Ferro_Eat_Closed.png',
