--- a/index.html
+++ b/index.html
@@ -62,16 +62,7 @@
       position: absolute;
       left: 71%;
       transition: left 0.5s ease;
-      bottom: 80px;
-    }
-
-    #ferroBarrel {
-      position: absolute;
-      display: none;
-      width: 20%;
-      bottom: 80px;
-      left: calc(10% + 30px);
-    }
+      bottom: 80px;}
 
     .stats {
       font-size: 16px;
@@ -123,7 +114,6 @@
     <img id="petImage" src="https://abblake89.github.io/ferro-pets/assets/Ferro.png" alt="Ferro, your magnetic pet" role="button" tabindex="0" />
     <img id="foodBowl" src="https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png" alt="Food Bowl" />
     <img id="feederMachine" src="https://abblake89.github.io/ferro-pets/assets/FerroFeeder.png" alt="Feeder Machine" style="display: none;" />
-    <img id="ferroBarrel" src="https://abblake89.github.io/ferro-pets/assets/FerroBarrel.png" alt="Ferro Barrel" />
     <button id="startButton" onclick="startGame()">Play</button>
   </div>
   <div class="stats" id="stats">
@@ -144,7 +134,6 @@
     const container = document.querySelector('.container');
     const foodBowl = document.getElementById('foodBowl');
     const feeder = document.getElementById('feederMachine');
-    const barrel = document.getElementById('ferroBarrel');
     const happinessEl = document.getElementById('happiness');
     const hungerEl = document.getElementById('hunger');
     const startButton = document.getElementById('startButton');
@@ -159,8 +148,7 @@
       'Ferro_right.png',
       'Ferro_blink.png',
       'Ferro_Gold.png',
-      'FerroFeeder.png',
-      'FerroBarrel.png'
+      'FerroFeeder.png'
     ];
 
     preloadImages.forEach(img => {
@@ -169,10 +157,10 @@
     });
 
     let backgroundX = 50;
-    let happiness = parseInt(localStorage.getItem('happiness')) || 100;
-    let hunger = parseInt(localStorage.getItem('hunger')) || 0;
-    let ferroSize = parseInt(localStorage.getItem('ferroSize')) || 10;
+    let happiness = 100;
+    let hunger = 0;
     let isBusy = false;
+    let ferroSize = 10;
 
     function updateStats() {
       happiness = Math.min(100, Math.max(0, happiness));
@@ -180,39 +168,77 @@
       happinessEl.textContent = happiness;
       hungerEl.textContent = hunger;
       document.getElementById('ferroSizeDisplay').textContent = ferroSize;
-
-      localStorage.setItem('happiness', happiness);
-      localStorage.setItem('hunger', hunger);
-      localStorage.setItem('ferroSize', ferroSize);
     }
 
     function startGame() {
       startButton.style.display = 'none';
       stats.style.display = 'block';
       buttonControls.style.display = 'block';
-      petImage.style.width = ferroSize + '%';
       updateStats();
-      setupNFC();
     }
 
-    function setupNFC() {
-      if ('NDEFReader' in window) {
-        const ndef = new NDEFReader();
-        ndef.scan().then(() => {
-          ndef.onreading = event => {
-            const message = event.message;
-            for (const record of message.records) {
-              const textDecoder = new TextDecoder();
-              const data = textDecoder.decode(record.data);
-              if (data === 'FerroBarrel') {
-                barrel.style.display = 'block';
-              }
-            }
-          };
-        }).catch(error => {
-          console.error("NFC Scan error:", error);
-        });
-      }
+    function feedPet() {
+      if (isBusy) return;
+      isBusy = true;
+      hunger = Math.max(0, hunger - 20);
+      happiness = Math.min(100, happiness + 10);
+      updateStats();
+      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
+      backgroundX = 100;
+      container.style.backgroundPositionX = backgroundX + '%';
+      foodBowl.style.display = 'inline';
+      feeder.style.display = 'inline';
+      foodBowl.style.left = '120%';
+      feeder.style.left = '132%';
+      setTimeout(() => {
+        foodBowl.style.left = 'calc(64% - 15px)';
+        feeder.style.left = 'calc(76% - 34px)';
+        const chewFrames = [
+          'Ferro_Eat_Open.png',
+          'Ferro_Eat_Closed.png',
+          'Ferro_Eat_Open.png',
+          'Ferro_Eat_Closed.png',
+          'Ferro_Eat_Open.png',
+          'Ferro_Eat_Closed.png'
+        ];
+
+        let frameIndex = 0;
+        const chewInterval = setInterval(() => {
+          if (frameIndex === 1) foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowl66.png';
+          if (frameIndex === 3) foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowl33.png';
+          if (frameIndex === 5) foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowlEmpty.png';
+
+          petImage.src = `https://abblake89.github.io/ferro-pets/assets/${chewFrames[frameIndex]}`;
+          if (frameIndex % 2 === 1) {
+            ferroSize = Math.min(100, ferroSize + 1);
+            petImage.style.width = ferroSize + '%';
+          }
+          frameIndex++;
+
+          if (frameIndex >= chewFrames.length) {
+            clearInterval(chewInterval);
+            petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_Happy.png';
+            setTimeout(() => {
+              petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
+              backgroundX = 50;
+              container.style.backgroundPositionX = backgroundX + '%';
+              foodBowl.style.left = '120%';
+              feeder.style.left = '132%';
+              setTimeout(() => {
+                petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+                foodBowl.style.left = '120%';
+                feeder.style.left = '132%';
+                setTimeout(() => {
+                  foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png';
+                  foodBowl.style.display = 'none';
+                  feeder.style.display = 'none';
+                  isBusy = false;
+                }, 500);
+              }, 500);
+            }, 1500);
+          }
+        }, 800);
+      }, 50);
     }
   </script>
 </body>
