--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Ferro Pet</title>
-  <style> 
+  <style>
     body {
       font-family: 'Arial', sans-serif;
       background: #f8f0e3;
@@ -62,7 +62,8 @@
       position: absolute;
       left: 71%;
       transition: left 0.5s ease;
-      bottom: 80px;}
+      bottom: 80px;
+    }
 
     .stats {
       font-size: 16px;
@@ -136,6 +137,7 @@
     const feeder = document.getElementById('feederMachine');
     const happinessEl = document.getElementById('happiness');
     const hungerEl = document.getElementById('hunger');
+    const ferroSizeDisplay = document.getElementById('ferroSizeDisplay');
     const startButton = document.getElementById('startButton');
     const stats = document.getElementById('stats');
     const buttonControls = document.getElementById('buttonControls');
@@ -167,7 +169,7 @@
       hunger = Math.min(100, Math.max(0, hunger));
       happinessEl.textContent = happiness;
       hungerEl.textContent = hunger;
-      document.getElementById('ferroSizeDisplay').textContent = ferroSize;
+      ferroSizeDisplay.textContent = ferroSize;
     }
 
     function startGame() {
@@ -175,6 +177,38 @@
       stats.style.display = 'block';
       buttonControls.style.display = 'block';
       updateStats();
+    }
+
+    function blink() {
+      if (isBusy) return;
+      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_blink.png';
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+      }, 300);
+    }
+
+    function moveLeft() {
+      if (isBusy) return;
+      isBusy = true;
+      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
+      backgroundX = Math.max(0, backgroundX - 15);
+      container.style.backgroundPositionX = backgroundX + '%';
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+        isBusy = false;
+      }, 500);
+    }
+
+    function moveRight() {
+      if (isBusy) return;
+      isBusy = true;
+      petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png';
+      backgroundX = Math.min(100, backgroundX + 15);
+      container.style.backgroundPositionX = backgroundX + '%';
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+        isBusy = false;
+      }, 500);
     }
 
     function feedPet() {
@@ -195,50 +229,72 @@
         feeder.style.left = 'calc(76% - 34px)';
         const chewFrames = [
           'Ferro_Eat_Open.png',
-          'Ferro_Eat_Closed.png',
-          'Ferro_Eat_Open.png',
-          'Ferro_Eat_Closed.png',
-          'Ferro_Eat_Open.png',
           'Ferro_Eat_Closed.png'
         ];
 
-        let frameIndex = 0;
-        const chewInterval = setInterval(() => {
-          if (frameIndex === 1) foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowl66.png';
-          if (frameIndex === 3) foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowl33.png';
-          if (frameIndex === 5) foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowlEmpty.png';
-
-          petImage.src = `https://abblake89.github.io/ferro-pets/assets/${chewFrames[frameIndex]}`;
-          if (frameIndex % 2 === 1) {
+        let cycleCount = 0;
+        function chewCycle() {
+          if (cycleCount >= 3) {
+            showHappyFace();
+            return;
+          }
+          petImage.src = `https://abblake89.github.io/ferro-pets/assets/${chewFrames[0]}`;
+          setTimeout(() => {
+            petImage.src = `https://abblake89.github.io/ferro-pets/assets/${chewFrames[1]}`;
             ferroSize = Math.min(100, ferroSize + 1);
             petImage.style.width = ferroSize + '%';
-          }
-          frameIndex++;
+            updateStats();
+            cycleCount++;
+            setTimeout(chewCycle, 800);
+          }, 800);
+        }
 
-          if (frameIndex >= chewFrames.length) {
-            clearInterval(chewInterval);
-            petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_Happy.png';
+        function showHappyFace() {
+          petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_Happy.png';
+          setTimeout(() => {
+            resetAfterFeed();
+          }, 1500);
+        }
+
+        function resetAfterFeed() {
+          petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
+          backgroundX = 50;
+          container.style.backgroundPositionX = backgroundX + '%';
+          foodBowl.style.left = '120%';
+          feeder.style.left = '132%';
+          setTimeout(() => {
+            petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
             setTimeout(() => {
-              petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png';
-              backgroundX = 50;
-              container.style.backgroundPositionX = backgroundX + '%';
-              foodBowl.style.left = '120%';
-              feeder.style.left = '132%';
-              setTimeout(() => {
-                petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
-                foodBowl.style.left = '120%';
-                feeder.style.left = '132%';
-                setTimeout(() => {
-                  foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png';
-                  foodBowl.style.display = 'none';
-                  feeder.style.display = 'none';
-                  isBusy = false;
-                }, 500);
-              }, 500);
-            }, 1500);
-          }
-        }, 800);
+              foodBowl.src = 'https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png';
+              foodBowl.style.display = 'none';
+              feeder.style.display = 'none';
+              isBusy = false;
+            }, 500);
+          }, 500);
+        }
+
+        chewCycle();
       }, 50);
+    }
+
+    function shakeFerro() {
+      if (isBusy) return;
+      isBusy = true;
+      const frames = [
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png',
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png',
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_left.png',
+        'https://abblake89.github.io/ferro-pets/assets/Ferro_right.png'
+      ];
+      frames.forEach((frame, i) => {
+        setTimeout(() => {
+          petImage.src = frame;
+        }, i * 120);
+      });
+      setTimeout(() => {
+        petImage.src = 'https://abblake89.github.io/ferro-pets/assets/Ferro.png';
+        isBusy = false;
+      }, frames.length * 120);
     }
   </script>
 </body>
