--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
     <img id="petImage" src="https://abblake89.github.io/ferro-pets/assets/Ferro.png" alt="Ferro, your magnetic pet" role="button" tabindex="0" />
     <img id="foodBowl" src="https://abblake89.github.io/ferro-pets/assets/FoodBowlFull.png" alt="Food Bowl" />
     <img id="feederMachine" src="https://abblake89.github.io/ferro-pets/assets/FerroFeederFull.png" alt="Feeder Machine" style="display: none;" />
+	<img id="ferroBarrel" src="https://abblake89.github.io/ferro-pets/assets/FerroBarrel.png" alt="Ferro Barrel" style="display: none; position: absolute; bottom: 80px;" />
+
     <button id="startButton" onclick="startGame()">Play</button>
   </div>
   <div class="stats" id="stats">
@@ -141,6 +143,7 @@
     const startButton = document.getElementById('startButton');
     const stats = document.getElementById('stats');
     const buttonControls = document.getElementById('buttonControls');
+	const barrelImage = document.getElementById('ferroBarrel');
 
     const preloadImages = [
       'Ferro_Eat_Open.png',
@@ -167,7 +170,7 @@
     let hunger = 0;
     let isBusy = false;
     let ferroSize = 10;
-    let feederUsesLeft = 2;
+    let feederUsesLeft = 15;
 
     function updateStats() {
       happiness = Math.min(100, Math.max(0, happiness));
@@ -316,6 +319,12 @@
       }, frames.length * 120);
     }
 	
+	
+	
+	
+	
+	
+	
 	function startNFCScan() {
   if ('NDEFReader' in window) {
     try {
@@ -329,6 +338,12 @@
               if (text.trim() === 'ferro_food') {
                 feedPet();
               }
+			  else if (text === 'ferro_barrel') {
+				const ferroLeft = petImage.offsetLeft;
+				const barrelLeft = ferroLeft - 30;
+				barrelImage.style.left = `${barrelLeft}px`;
+				barrelImage.style.display = 'inline';
+				}
             }
           }
         };
