--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
               if (text.trim() === 'ferro_food') {
                 feedPet();
               }
-			  else if (text === 'ferro_barrel') {
+			  else if (text.trim() === 'FerroBarrel') {
 				const ferroLeft = petImage.offsetLeft;
 				const barrelLeft = ferroLeft - 30;
 				barrelImage.style.left = `${barrelLeft}px`;
