--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@ function refillFeeder() {
 
     setTimeout(() => {
       feederUsesLeft = 15;
-      barrelImage.style.display = 'none';
+      barrelImage.style.display = 'inline';
       barrelImage.style.transform = 'none';
       barrelImage.style.bottom = '80px';
       isBusy = false;
